--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Dictionary</title>
 </head>
 <body>
-    <h1>Welcome to my Dictionary's Project</h1>
+    <h1>Kapingamarangi Dictionary</h1>
 </body>
 </html>
