--- a/index.html
+++ b/index.html
@@ -28,18 +28,19 @@
 </head>
 <body>
 
-<h1>A Fancy Table</h1>
+<h1>English to Kapingamrangi Language</h1>
+<h3>English to Kap vacabularies and basic phrases</h3>
 
 <table id="customers">
   <tr>
-    <th>Company</th>
-    <th>Contact</th>
-    <th>Country</th>
+    <th>English</th>
+    <th>Kapingamarangi</th>
+    <th>slang</th>
   </tr>
   <tr>
-    <td>Alfreds Futterkiste</td>
-    <td>Maria Anders</td>
-    <td>Germany</td>
+    <td>Thank you!</td>
+    <td>Di me bolo goi</td>
+    <td>bolo goi</td>
   </tr>
   <tr>
     <td>Berglunds snabbköp</td>
