--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
 
 <h1>English to Kapingamrangi Language</h1>
 <h3>English to Kap vacabularies and basic phrases</h3>
+  <h6>i'm = au</h6>
+  <h6>we = maua(for two people)</h6>
+  <h6>we = maadou(more than two people)</h6>
 
 <table id="customers">
   <tr>
@@ -43,51 +46,52 @@
     <td>bolo goi</td>
   </tr>
   <tr>
-    <td>Berglunds snabbköp</td>
-    <td>Christina Berglund</td>
-    <td>Sweden</td>
+    <td>How are you?</td>
+    <td>Goi<span>(one person)</span>/goolua<span>(two people)</span>/goodou<span>(more than two people)</span> guu haibehe?</td>
+    <td>guu haibehe?</td>
   </tr>
   <tr>
-    <td>Centro comercial Moctezuma</td>
-    <td>Francisco Chang</td>
-    <td>Mexico</td>
+    <td>im good</td>
+    <td>au e humalia hua</td>
+    <td>au malia hua</td>
   </tr>
   <tr>
-    <td>Ernst Handel</td>
-    <td>Roland Mendel</td>
-    <td>Austria</td>
+    <td>Tomorrow</td>
+    <td>Daiaa</td>
+    <td>Daiaa</td>
   </tr>
   <tr>
-    <td>Island Trading</td>
-    <td>Helen Bennett</td>
-    <td>UK</td>
+    <td>Maybe</td>
+    <td>Holongo</td>
+    <td>Holongo</td>
   </tr>
   <tr>
-    <td>Königlich Essen</td>
-    <td>Philip Cramer</td>
-    <td>Germany</td>
+    <td>Angry</td>
+    <td>hagawelewele</td>
+    <td>gawelewel</td>
   </tr>
   <tr>
-    <td>Laughing Bacchus Winecellars</td>
-    <td>Yoshi Tannamuri</td>
-    <td>Canada</td>
+    <td>Believe</td>
+    <td>hagadonu</td>
+    <td>hagadonu</td>
   </tr>
   <tr>
-    <td>Magazzini Alimentari Riuniti</td>
-    <td>Giovanni Rovelli</td>
-    <td>Italy</td>
+    <td>i'm cold</td>
+    <td>au guu magalili</td>
+    <td>gu.maga.lili</td>
   </tr>
   <tr>
-    <td>North/South</td>
-    <td>Simon Crowther</td>
-    <td>UK</td>
+    <td>I wanna bear my testimony</td>
+    <td>Au e hiihai e hai dagu hagaamu</td>
+    <td></td>
   </tr>
   <tr>
-    <td>Paris spécialités</td>
-    <td>Marie Bertrand</td>
-    <td>France</td>
+    <td>I didn't get it</td>
+    <td>Au digii modongoohia</td>
+    <td>dikii modongoohia</td>
   </tr>
 </table>
+  <h6>note: I will updates more words and phrases and improve the design as well so please keep an eye on the update</h6>
 
 </body>
 </html>
