--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 
 <h1>English to Kapingamrangi Language</h1>
 <h3>English to Kap vacabularies and basic phrases</h3>
+<h5>created for the Kolonia Missionaries</h5>
   <h6>i'm = au</h6>
   <h6>we = maua(for two people)</h6>
   <h6>we = maadou(more than two people)</h6>
