--- a/index.html
+++ b/index.html
@@ -31,9 +31,7 @@
 <h1>English to Kapingamrangi Language</h1>
 <h3>English to Kap vacabularies and basic phrases</h3>
 <h5>created for the Kolonia Missionaries</h5>
-  <h6>i'm = au</h6>
-  <h6>we = maua(for two people)</h6>
-  <h6>we = maadou(more than two people)</h6>
+  
 
 <table id="customers">
   <tr>
@@ -93,6 +91,13 @@
   </tr>
 </table>
   <h6>note: I will updates more words and phrases and improve the design as well so please keep an eye on the update</h6>
+  <div id="note">
+    <h6>i'm = au</h6>
+    <h6>we = maua(for two people)</h6>
+    <h6>we = maadou(more than two people)
+    </h6>
+  </div>
+  
 
 </body>
 </html>
