--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 <h1>English to Kapingamrangi Language</h1>
 <h3>English to Kap vacabularies and basic phrases</h3>
-<h5>created for the Kolonia Missionaries</h5>
+<h5>Desiged to help Missionaries</h5>
   
 
 <table id="customers">
